test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_tentative_def.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  struct
  identifier(s)
  ;
  static
  struct
  identifier(s)
  identifier(x)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
